[package]
name = "rust-crud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
serde_derive = "0.9"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = "1.0.133"
serde_json = "1.0.74"
